--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Welcome to the Analysis, Technology, Leadership, Administration and Scien
 
 <p>The ATLAS-D2K Center’s long-term goal is to bring complex data into an accessible form for our research communities that are establishing connections between molecular data of the kidney and lower urinary tract via the <a href="https://www.gudmap.org" target="_blank">GUDMAP</a>, <a href="https://www.rebuildingakidney.org" target="_blank">ReBuilding A Kidney</a>, <a href="https://www.kpmp.org/" target="_blank">Kidney Precision Medicine Project</a>, <a href="https://hubmapconsortium.org/" target="_blank">HuBMAP</a>, and the <a href="https://www.humancellatlas.org/" target="_blank">Human Cell Atlas (HCA)</a> consortiums.</p>
 
-<h3>Bringing data to knowledge (D2K)</h3>
+<h3>Bringing Data to Knowledge (D2K)</h3>
 
 <p>During the first year of funding, we are focusing on making this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions. Our data respository includes the full contributions of the GUDMAP and ReBuilding A Kidney Consortiums with growing contributions from HuBMAP and KPMP and will soon include more intersections between data, knowledge and analysis tools from all of these consortiums.</p>
 
