expanding ktrc acronym

--- a/cell-lines/index.html
+++ b/cell-lines/index.html
@@ -10,7 +10,7 @@ title: Request iPSC Cell Lines
 
 <h3>Costs</h3>
 
-<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the KTRC, ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations.</p>
+<p>The cost of obtaining Human Induced Pluripotent Stem Cells (HiPSCs) is now covered by subsidies by the Kidney Translational Research Center (KTRC), ATLAS D2K (U24DK135157) and WU-PCEN (P50DK133943) grants. These sources should be cited in publications and presentations.</p>
 
 <p>We will now be able to offer the first vial of each human iPSC cell lines at no charge and the second vial of the same cell line for $250.00.</p>
 
