updating home page with shortcuts and news

--- a/index.html
+++ b/index.html
@@ -1,15 +1,127 @@
 ---
 layout: home
-title: Bringing Data to Knowledge
+title: ATLAS-D2K - Bringing Data to Knowledge
 ---
+<div class="row">
 
-<p>The ATLAS-D2K Center’s long-term goal is to bring complex data into an accessible form for our research communities that are establishing connections between molecular data of the kidney and lower urinary tract via the <a href="https://www.gudmap.org" target="_blank">GUDMAP</a>, <a href="https://www.rebuildingakidney.org" target="_blank">ReBuilding A Kidney</a>, <a href="https://www.kpmp.org/" target="_blank">Kidney Precision Medicine Project</a>, <a href="https://hubmapconsortium.org/" target="_blank">HuBMAP</a>, and the <a href="https://www.humancellatlas.org/" target="_blank">Human Cell Atlas (HCA)</a> consortiums.</p>
+  <div class="col-md-12">
+  <p>The Analysis, Technology, Leadership, Administration and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities that are establishing connections between molecular data of the kidney and lower urinary tract.</p>
 
-<h3>Analysis, Technology, Leadership, Administration and Science - Data to Knowledge (ATLAS-D2K)</h3>
+  <p>Our goal is to make this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions. Our data respository includes the full contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> Consortiums with growing contributions from <strong>HuBMAP</strong> and <strong>KPMP</strong> and will soon include more intersections between data, knowledge and analysis tools from all of these consortiums.</p>
+  </div>
+</div>
 
-<p>During the first year of funding, we are focusing on making this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions. Our data respository includes the full contributions of the GUDMAP and ReBuilding A Kidney (RBK) Consortiums with growing contributions from HuBMAP and KPMP and will soon include more intersections between data, knowledge and analysis tools from all of these consortiums.</p>
+<div class="row">
 
-<p>To start exploring available data, click <strong>BROWSE DATA</strong> in the navigation menu above.</p>
+<div class="col-md-12">
+  <div class="shortcuts">
+
+
+  <h3>Browse these data shortcuts...<br/>
+    <small>For more search options, click the BROWSE DATA menu above.</small>
+<!--
+<small>Over 11,000 records and 4,000 images</small>
+-->
+</h3>
+<div class="row shortcut-links">
+<div class="col-md-4">
+  <ul>
+    <li class="sub-parent">SEARCH BY...</li>
+    <li><a href="/chaise/recordset/#2/Common:Gene?pcid=static/home">Gene</a></li>
+    <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/?pcid=static/home">Anatomy: Facet Search</a></li>
+    <li><a href="/deriva-webapps/treeview/">Anatomy: Tree View</a></li>
+    <!--
+    <li><a href="/deriva-webapps/boolean-search/">Anatomy: Boolean Search</a></li> -->
+    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(MNv4BPeh3jGF-9rfFpULzQ,RID)?pcid=navbar/static">Investigator</a></li>
+  </ul>
+  <ul>
+    <li class="sub-parent">VISUALIZATIONS</li>
+    <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Data</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq
+    Data</a></li>
+  </ul>
+  <ul>
+    <li class="sub-parent">DATA COLLECTIONS</li>
+<!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ?pcid=static/home">Featured Image Annotations</a></li> -->
+    <li><a href="/chaise/recordset/#2/Common:Collection@sort(RID)?pcid=static/home">All Data Collections</a></li>
+  </ul>
+</div>
+<div class="col-md-4">
+  <ul>
+    <li class="sub-parent">IMAGING</li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoZGxkA@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=static/home">In-situ Hybridization</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoBJABIBhQ0eNA?pcid=static/home">Immunohistochemistry</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoAJbkiIoANigDm+48ZAA@sort(Stage_Ordinal,RID)?pcid=static/home">Histology</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFp3l2Y0NGxkA@sort(RCT::desc::,Stage_Ordinal,RID)">NanoCT</a></li>
+    <!--
+<li><a href="/chaise/recordset/#2/Gene_Expression:Specimen@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=home/static">All Specimen Data</a></li>
+-->
+  </ul>
+  <ul>
+    <li class="sub-parent">SEQUENCING</li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6BoZAA@sort(RMT::desc::,RID)?pcid=static/home">mRNA-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF7sIKnJAJoAUvkATPoGhkA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq/snRNA-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfoGhkA@sort(RMT::desc::,RID)?pcid=static/home">ChIP-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)?pcid=static/home">Microarray</a></li>
+    <!--
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/?pcid=static/home">All Studies</a></li>
+    -->
+  </ul>
+</div>
+<div class="col-md-4">
+  <ul>
+    <li class="sub-parent">EXPERIMENT PROTOCOLS</li>
+    <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)?pcid=static/home">All Protocols</a></li>
+  </ul>
+  <ul>
+    <li class="sub-parent">CELL & ANIMAL MODELS</li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line@sort(ID)?pcid=static/home">Transgenic Reporter Cell Lines</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static/home">Parental Cell Lines</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)?pcid=static/home">Transgenic Mouse Strains</a></li>
+  </ul>
+  <ul>
+    <li class="sub-parent">ANTIBODIES</li>
+    <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)?pcid=static/home">Antibody Validation</a></li>
+    <li><a href="/chaise/recordset/#2/Antibody:Antibodies?pcid=static/home">Antibody Listings</a></li>
+  </ul>
+</div>
+</div>
+<!--
+<div class="row">
+
+<div class="col-md-12">
+    <iframe class="embed-responsive" name="resources-viewer" id="resources-viewer" style="width: 675px; height: 350px; border-style: none; border-color: inherit; border-width: 0px; " src="/deriva-webapps/plot/?config=gudmap-data-summary-responsive">
+    </iframe>
+</div>
+
+</div>
+-->
+</div>
+</div>
+
+
+</div>
+<div class="row">
+<div class="col-md-12">
+  <section id="news">
+    <h3>Latest News</h3>
+    <ul class="posts">
+      {% for post in site.posts limit: 4 %}
+    <li>
+      <h4>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </h4>
+      <time>
+        {{ post.date | date: "%m/%d/%Y" }}
+        </time>
+    </li>
+    {% endfor %}
+    </ul>
+  <!--  <a id="more-news" href="/news/">more news ></a><br>
+    <a href="/publications/">publications ></a> -->
+  </section>
+</div>
+</div>
 <!--
 <h4>Contributing Consortiums</h4>
 
