fixed investigator link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: ATLAS-D2K - Bringing Data to Knowledge
     <li><a href="/deriva-webapps/treeview/">Anatomy: Tree View</a></li>
     <!--
     <li><a href="/deriva-webapps/boolean-search/">Anatomy: Boolean Search</a></li> -->
-    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM4gEkkB9AcQFUARAWQEEAFY+gkAGhCwAsUBLXJOPAAuGNDgC6AXylA@sort(MNv4BPeh3jGF-9rfFpULzQ,RID)?pcid=navbar/static">Investigator</a></li>
+    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator@sort(Person)?pcid=navbar/static">Investigator</a></li>
   </ul>
   <ul>
     <li class="sub-parent">VISUALIZATIONS</li>
