fleshing out funding section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@ title: ATLAS-D2K - Bringing Data to Knowledge
 ---
 <div class="row">
 
-  <div class="col-md-12">
+  <div class="col-md-8">
   <p>The Analysis, Technology, Leadership, Administration and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities that are establishing connections between molecular data of the kidney and lower urinary tract.</p>
 
-  <p>Our goal is to make this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions. Our data respository includes the full contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> Consortiums with growing contributions from <strong>HuBMAP</strong> and <strong>KPMP</strong> and will soon include more intersections between data, knowledge and analysis tools from all of these consortiums.</p>
+  <p>Our goal is to make this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions.</p>
+
+  <p>Our data respository includes the full contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> Consortiums with growing contributions from <strong>HuBMAP</strong> and <strong>KPMP</strong>.</p>
+
+  <p>ATLAS-D2K will soon include more intersections between data, knowledge and analysis tools from all of these consortiums to bring cutting-edge data to knowledge for everyone's benefit.</p>
+  </div>
+  <div class="col-md-4 iotw">
+    <img src="https://via.placeholder.com/280" alt="C/O https://placeholder.com/#How_To_Use_Our_Placeholders">
+    <p class="caption">Lightsheet image of bladder of adult female mouse (Maria Daglas, Keast Group, Melbourne University)</p>
   </div>
 </div>
 
