--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@ title: ATLAS-D2K - Bringing Data to Knowledge
 <div class="row">
 
   <div class="col-md-8">
-  <p>The Analysis, Technology, Leadership, Administration and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities that are establishing connections between molecular data of the kidney and lower urinary tract.</p>
+    <p>The Analysis, Technology, Leadership, Administration, and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities and establish connections between molecular data of the kidney and lower urinary tract.</p>
 
-  <p>Our goal is to make this online resource the central hub of data discovery with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract regions.</p>
+    <p>We aim to make this online resource a data discovery hub with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract.
+    </p>
 
-  <p>Our data respository includes the full contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> Consortiums with growing contributions from <strong>HuBMAP</strong> and <strong>KPMP</strong>.</p>
+    <p>Our data repository includes the total contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> consortiums, with growing cross-data linkages with the KPMP and HuBMAP consortiums.</p>
 
-  <p>ATLAS-D2K will soon include more intersections between data, knowledge and analysis tools from all of these consortiums to bring cutting-edge data to knowledge for everyone's benefit.</p>
+    <p>ATLAS-D2K will soon include more intersections between data, knowledge, and analysis tools from these consortiums to bring cutting-edge data-to-knowledge abilities to broader portions of the research community.</p>
+
   </div>
   <div class="col-md-4 iotw">
     <img src="https://via.placeholder.com/280" alt="C/O https://placeholder.com/#How_To_Use_Our_Placeholders">
