adding iotw, updating news

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@ title: ATLAS-D2K - Bringing Data to Knowledge
     <p>We aim to make this online resource a data discovery hub with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract.
     </p>
 
-    <p>Our data repository includes the total contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> consortiums, with growing cross-data linkages with the KPMP and HuBMAP consortiums.</p>
+    <p>Our data repository includes the total contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> consortia, with growing cross-data linkages with the KPMP and HuBMAP consortia.</p>
 
-    <p>ATLAS-D2K will soon include more intersections between data, knowledge, and analysis tools from these consortiums to bring cutting-edge data-to-knowledge abilities to broader portions of the research community.</p>
+    <p>ATLAS-D2K will soon include more intersections between data, knowledge, and analysis tools from these consortia to bring cutting-edge data-to-knowledge abilities to broader portions of the research community.</p>
 
   </div>
   <div class="col-md-4 iotw">
-    <img src="https://via.placeholder.com/280" alt="C/O https://placeholder.com/#How_To_Use_Our_Placeholders">
-    <p class="caption">Lightsheet image of bladder of adult female mouse (Maria Daglas, Keast Group, Melbourne University)</p>
+    <a href="/id/W-QZT6">
+    <img src="/assets/img/iotw/W-QZTE-vezina-ihc.jpeg" alt="C/O https://placeholder.com/#How_To_Use_Our_Placeholders">
+    </a>
+    <p class="caption">IHC of Mouse Bladder (TS26/18dpc) (Chad Vezina, University of Wisconsin)</p>
   </div>
 </div>
 
@@ -133,7 +135,7 @@ title: ATLAS-D2K - Bringing Data to Knowledge
 </div>
 </div>
 <!--
-<h4>Contributing Consortiums</h4>
+<h4>Contributing Consortia</h4>
 
 <div class="gallery">
   <div class="consortium">
