adding links to GUDMAP and RBK

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: ATLAS-D2K - Bringing Data to Knowledge
     <p>We aim to make this online resource a data discovery hub with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract.
     </p>
 
-    <p>Our data repository includes the total contributions of the <strong>GUDMAP</strong> and <strong>ReBuilding A Kidney (RBK)</strong> consortia, with growing cross-data linkages with the KPMP and HuBMAP consortia.</p>
+    <p>Our data repository includes the total contributions of the <strong><a href="https://www.gudmap.org">GUDMAP</a></strong> and <strong><a href="https://www.rebuildingakidney.org">ReBuilding A Kidney (RBK)</a></strong> consortia, with growing cross-data linkages with the KPMP and HuBMAP consortia.</p>
 
     <p>ATLAS-D2K will soon include more intersections between data, knowledge, and analysis tools from these consortia to bring cutting-edge data-to-knowledge abilities to broader portions of the research community.</p>
 
