--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: ATLAS-D2K - Bringing Data to Knowledge
   <div class="shortcuts">
 
 
-  <h3>Browse these data shortcuts...<br/>
-    <small>For more search options, click the BROWSE DATA menu above.</small>
+  <h3>Browse these shortcuts for GUDMAP and RBK data...<br/>
+    <small>For more search options, click the DATA menu above.</small>
 <!--
 <small>Over 11,000 records and 4,000 images</small>
 -->
