Updated footer, default navbar, new pages

--- a/resources/tools/index.html
+++ b/resources/tools/index.html
@@ -5,6 +5,8 @@ tag: tools
 title: Community Tools
 ---
 
+<p>Integrate with the <a href="../external-resources/">GUDMAP external links</a> - show them all on this page</p>
+
 <div class="blurb">
   <p>This page lists helpful tools developed by RBK projects as well as the kidney research community.</p>
   <dl class="resource-list">
