fixing layout for new terms of use page

--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 title: ATLAS-D2K Terms of Use
 description: Describes the terms under which users may re-use data from ATLAS-D2K.
 ---
