tweaking the slogan

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: ATLAS-D2K - Bringing Data to Knowledge
+title: ATLAS-D2K - Transforming Data into Knowledge
 ---
 <div class="row">
 
