updating rebuildingakidney subsite

--- a/rebuildingakidney/projects/extracellular-matrix-scaffolds/index.html
+++ b/rebuildingakidney/projects/extracellular-matrix-scaffolds/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: default
+layout: rbk
 tag:
 title: Building Extracellular Matrix Scaffolds to Induce Nephron Development
 ---
