--- a/rebuildingakidney/projects/forming-kidney-map/index.html
+++ b/rebuildingakidney/projects/forming-kidney-map/index.html
@@ -1,6 +1,6 @@
 ---
 # req_authn: authn
-layout: default
+layout: rbk
 tag:
 title: Kidney Microphysiological Analysis Platforms (MAP) to Optimize Function and Model Disease
 ---
