added reources layout

--- a/resources/disease/index.html
+++ b/resources/disease/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: resources
 title: Disease Resource
 description: Links to websites useful for understanding genitourinary disease through studying gene expression and development.
 redirect_from:
