--- a/resources/genital-tubercule-atlas/index.html
+++ b/resources/genital-tubercule-atlas/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: resources
 title: Mouse Genital Tubercule Reference Models
 description: A set of 3D reference models with and without the gene-expression patterns for the marker gene shh.
 redirect_from:
