--- a/resources/tissue-summaries/index.html
+++ b/resources/tissue-summaries/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: resources
 title: Tissue Summaries
 description: High-quality diagrams of GenitoUrinary tissues that link to deeper information
 redirect_from:
