--- a/gudmap/index.html
+++ b/gudmap/index.html
@@ -1,49 +1,10 @@
 ---
-layout: gudmap-home
+layout: gudmap
 title: GUDMAP Consortium
 categories: []
 tags: []
 ---
 
-<div class="row homeBanner">
-  <div class="col-md-1">
-
-  </div>
-  <div class="col-md-5 col-sm-3 logoBlock">
-	   <img src="/assets/img/gudmap-logo.svg" class="logo img-responsive">
-  </div>
-  <div class="col-md-5 cta">
-    <div class="formBlock">
-        <form class="search search-form" id="main-search">
-          <div class="input-group">
-            <input type="text" class="form-control" name="search_term" placeholder="Search genitourinary data in GUDMAP">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="submit">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </span>
-          </div>
-          <div class="search-panel">
-            <input type="radio" id="gene" name="search_param" value="gene"
-                   checked>
-            <label for="gene">GENE</label>
-            <input type="radio" id="anatomy" name="search_param" value="anatomy"
-                   >
-            <label for="anatomy">ANATOMY</label>
-            <input type="radio" id="species" name="search_param" value="species"
-                   >
-            <label for="species">SPECIES</label>
-            <input type="radio" id="proteins" name="search_param" value="proteins"
-                   >
-            <label for="proteins">PROTEIN</label>
-          </div>
-        </form>
-    </div>
-  </div>
-  <div class="col-md-1">
-
-  </div>
-</div>
 
 <div class="container-fluid content home">
 <div class="row">
