--- a/index.html
+++ b/index.html
@@ -2,28 +2,44 @@
 layout: home
 title: ATLAS-D2K - Transforming Data into Knowledge
 ---
-<div class="row">
 
-  <div class="col-md-8">
-    <p>The Analysis, Technology, Leadership, Administration, and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities and establish connections between molecular data of the kidney and lower urinary tract.</p>
+<div class="row" id="main-search">
 
-    <p>We aim to make this online resource a data discovery hub with access to visualizations and analysis of cutting-edge biomedical mouse and human data for the kidney and lower urinary tract.
-    </p>
-
-    <p>Our data repository includes the total contributions of the <strong><a href="https://www.gudmap.org">GUDMAP</a></strong> and <strong><a href="https://www.rebuildingakidney.org">ReBuilding A Kidney (RBK)</a></strong> consortia, with growing cross-data linkages with the KPMP and HuBMAP consortia.</p>
-
-    <p>ATLAS-D2K will soon include more intersections between data, knowledge, and analysis tools from these consortia to bring cutting-edge data-to-knowledge abilities to broader portions of the research community.</p>
-
-  </div>
-  <div class="col-md-4 iotw">
-    <a href="/id/W-QZT6">
-    <img src="/assets/img/iotw/W-QZTE-vezina-ihc.jpeg" alt="C/O https://placeholder.com/#How_To_Use_Our_Placeholders">
-    </a>
-    <p class="caption">IHC of Mouse Bladder (TS26/18dpc) (Chad Vezina, University of Wisconsin)</p>
+  <div class="formBlock">
+      <form class="search search-form">
+        <div class="input-group">
+          <input type="text" class="form-control" name="search_term" placeholder="Search data in ATLAS-D2K">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </span>
+        </div>
+        <div class="search-panel">
+          <input type="radio" id="gene" name="search_param" value="gene"
+                 checked>
+          <label for="gene">GENE</label>
+          <input type="radio" id="anatomy" name="search_param" value="anatomy"
+                 >
+          <label for="anatomy">ANATOMY</label>
+          <input type="radio" id="species" name="search_param" value="species"
+                 >
+          <label for="species">SPECIES</label>
+          <input type="radio" id="proteins" name="search_param" value="proteins"
+                 >
+          <label for="proteins">PROTEIN</label>
+        </div>
+      </form>
   </div>
 </div>
+</div>
 
-<div class="row">
+<div class="container">
+<div class="row" id="statistics">
+<p>icons and numbers representing data available in ATLAS</p>
+</div>
+
+<div class="row" id="shortcuts">
 
 <div class="col-md-12">
   <div class="shortcuts">
@@ -156,4 +172,5 @@ title: ATLAS-D2K - Transforming Data into Knowledge
     <img src="http://via.placeholder.com/200x200" alt="">
   </div>
 -->
+</div>
 </div>
