Update projects with awardees of 2023 RBK Opportunity Pool #21

--- a/rebuildingakidney/projects/index.html
+++ b/rebuildingakidney/projects/index.html
@@ -9,6 +9,10 @@ tag: projects
 <h2>Phase 2 Projects (Ongoing)</h2>
 
 <ul>
+	<li><a href="synthetic-kidney/">The Synthetic Kidney: A Revolutionary Solution for the Shortage of Kidneys for Transplantation<br/> <small>Zhongwei Li, <em>University of Southern California</em></small></a></li>
+	<li><a href="integrating-ub-collecting-systems/">Integrating UB collecting systems into hPSC-derived kidney organoids<br/> <small>Kyle McCracken, <em>Cincinnatti Children's</em></small></a></li>
+	<li><a href="stepwise-developmental-mimicry/">Stepwise developmental mimicry generates proximal tubules in organoids<br/> <small>Nils Lindstrom, <em>University of Southern California</em></small></a></li>
+	<li><a href="single-nuclei-multiome/">Single-nuclei multiome atlas for a mammalian model of kidney regeneration<br/> <small>Elizabeth Nguyen, <em>Seattle Children's</em></small></a></li>
 	<li><a href="aki-therapeutics/">AKI Therapeutics<br/> <small>Neil Hukriede (Contact PI), <em>University of Pittsburgh</em>; Alan Davidson, <em>University of Auckland</em>; Mark De Caestecker, <em>Vanderbilt University</em>; Donna Huryn, <em>University of Pittsburgh</em></small></a></li>
 	<li><a href="extracellular-matrix-scaffolds/">Building Extracellular Matrix Scaffolds to Induce Nephron Development<br/> <small>Jason A. Wertheim, <em>University of Arizona</em></small></a></li>
 	<li><a href="cell-specific-novel-therapies/">Cell-specific Delivery of Novel Therapies to Enhance Glomerular Regeneration and Repair<br/> <small>Stuart Shankland (Contact PI), <em>University of Washington</em>; Benjamin J. Freedman, <em>University of Washington</em>; James M. Roberts, <em>Lumen Bioscience</em>; Oliver Wessely, <em>Cleveland Clinic</em></small></a></li>
