--- a/index.html
+++ b/index.html
@@ -3,40 +3,152 @@ layout: home
 title: ATLAS-D2K - Transforming Data into Knowledge
 ---
 
-<div class="row" id="main-search">
+<div class="row homeBanner">
 
-  <div class="formBlock">
-      <form class="search search-form">
-        <div class="input-group">
-          <input type="text" class="form-control" name="search_term" placeholder="Search data in ATLAS-D2K">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="submit">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
-          </span>
-        </div>
-        <div class="search-panel">
-          <input type="radio" id="gene" name="search_param" value="gene"
-                 checked>
-          <label for="gene">GENE</label>
-          <input type="radio" id="anatomy" name="search_param" value="anatomy"
-                 >
-          <label for="anatomy">ANATOMY</label>
-          <input type="radio" id="species" name="search_param" value="species"
-                 >
-          <label for="species">SPECIES</label>
-          <input type="radio" id="proteins" name="search_param" value="proteins"
-                 >
-          <label for="proteins">PROTEIN</label>
-        </div>
-      </form>
+  <div class="col-md-2">
+
+  </div>
+
+  <div class="col-md-8">
+    <div class="formBlock">
+        <form class="search search-form">
+          <div class="input-group">
+            <input type="text" class="form-control" name="search_term" placeholder="Search data in ATLAS-D2K">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="submit">
+                <i class="fa fa-search" aria-hidden="true"></i>
+              </button>
+            </span>
+          </div>
+          <div class="search-panel">
+            <input type="radio" id="gene" name="search_param" value="gene"
+                   checked>
+            <label for="gene">GENE</label>
+            <input type="radio" id="anatomy" name="search_param" value="anatomy"
+                   >
+            <label for="anatomy">ANATOMY</label>
+            <input type="radio" id="species" name="search_param" value="species"
+                   >
+            <label for="species">SPECIES</label>
+            <input type="radio" id="proteins" name="search_param" value="proteins"
+                   >
+            <label for="proteins">PROTEIN</label>
+          </div>
+        </form>
+    </div>
+  </div>
+
+  <div class="col-md-2">
+
   </div>
 </div>
-</div>
 
-<div class="container">
+
+<div class="container-fluid content home">
+
+  <div class="jumbotron">
+    <h1>ATLAS-D2K</h1>
+    <h2>Transforming Data to Knowledge</h2>
+    <p>The Analysis, Technology, Leadership, Administration, and Science - Data to Knowledge (ATLAS-D2K) Center’s long-term goal is to bring complex data into an accessible form for our research communities and establish connections between molecular data of the kidney and lower urinary tract.</p>
+    <p class="cta"><a class="btn btn-primary btn-lg" href="/about/" role="button">Learn more</a></p>
+  </div>
+
 <div class="row" id="statistics">
-<p>icons and numbers representing data available in ATLAS</p>
+  <div class="stat-row">
+    <div class="stat-container 5across">
+          <div class="stat-content">
+            <span class=""></span>
+            <span class="stat-header">Species:</span>
+            <a href="#">
+              <span class="stat-number" id="stat-species-number">3
+                <!-- spinner: -->
+              <i class="fas fa-sync-alt fa-spin"></i>
+            </span>
+            </a>
+          </div>
+          <div class="stat-content">
+            <span class="stat-header">Assay Types:</span>
+            <a href="#">
+              <span class="stat-number" id="stat-assays-number">15
+                <!-- spinner: -->
+              <i class="fas fa-sync-alt fa-spin"></i>
+            </span>
+            </a>
+          </div>
+
+          <div class="stat-content">
+            <span class="stat-header">Bio-specimens:</span>
+            <a href="#">
+              <span class="stat-number" id="stat-specimen-number">324
+                <!-- spinner: -->
+            <i class="fas fa-sync-alt fa-spin"></i>
+          </span>
+            </a>
+          </div>
+
+          <div class="stat-content">
+            <span class="stat-header">Imaging:</span>
+            <a href="#">
+              <span class="stat-number" id="stat-imaging-number">1123
+                <!-- spinner: -->
+            <i class="fas fa-sync-alt fa-spin"></i>
+          </span>
+            </a>
+          </div>
+
+          <div class="stat-content">
+            <span class="stat-header">Transcriptomics:</span>
+            <a href="#">
+              <span class="stat-number" id="stat-transcriptomics-number">322
+                <!-- spinner: -->
+            <i class="fas fa-sync-alt fa-spin"></i>
+          </span>
+            </a>
+          </div>
+    </div>
+  </div>
+  <div class="stat-row">
+    <div class="stat-container 4across">
+            <div class="stat-content">
+              <span class="stat-header">Cell Lines:</span>
+              <a href="#">
+                <span class="stat-number" id="stat-cell-lines-number">10
+                  <!-- spinner: -->
+                <i class="fas fa-sync-alt fa-spin"></i>
+              </span>
+              </a>
+            </div>
+            <div class="stat-content">
+              <span class="stat-header">Protocols:</span>
+              <a href="#">
+                <span class="stat-number" id="stat-protocols-number">123
+                  <!-- spinner: -->
+                <i class="fas fa-sync-alt fa-spin"></i>
+              </span>
+              </a>
+            </div>
+
+            <div class="stat-content">
+              <span class="stat-header">Antibody Tests:</span>
+              <a href="#">
+                <span class="stat-number" id="stat-antibodytests-number">41
+                  <!-- spinner: -->
+              <i class="fas fa-sync-alt fa-spin"></i>
+            </span>
+              </a>
+            </div>
+
+            <div class="stat-content">
+              <span class="stat-header">Publications:</span>
+              <a href="#">
+                <span class="stat-number" id="stat-pubs-number">156
+                  <!-- spinner: -->
+              <i class="fas fa-sync-alt fa-spin"></i>
+            </span>
+              </a>
+            </div>
+    </div>
+  </div>
 </div>
 
 <div class="row" id="shortcuts">
@@ -55,62 +167,62 @@ title: ATLAS-D2K - Transforming Data into Knowledge
 <div class="col-md-4">
   <ul>
     <li class="sub-parent">SEARCH BY...</li>
-    <li><a href="/chaise/recordset/#2/Common:Gene?pcid=static/home">Gene</a></li>
-    <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/?pcid=static/home">Anatomy: Facet Search</a></li>
+    <li><a href="/chaise/recordset/#2/Common:Gene">Gene</a></li>
+    <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/">Anatomy: Facet Search</a></li>
     <li><a href="/deriva-webapps/treeview/">Anatomy: Tree View</a></li>
     <!--
     <li><a href="/deriva-webapps/boolean-search/">Anatomy: Boolean Search</a></li> -->
-    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator@sort(Person)?pcid=navbar/static">Investigator</a></li>
+    <li><a href="/chaise/recordset/#2/Common:Principal_Investigator@sort(Person)">Investigator</a></li>
   </ul>
   <ul>
     <li class="sub-parent">VISUALIZATIONS</li>
     <li><a href="/deriva-webapps/plot/?config=study-violin">mRNA-Seq Data</a></li>
-    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEANUKTTABtCALzAAXQiggB9BqLRQAnlIBmAaxwKQAXQC+bUOlFk0FBNXpNWHbrwHCxE6Tb6CR4yVLoAHL4KwOPNQ1tPWoASQARbQ4IFFEpCDR+fjhRDDQcHV0gA@sort(RMT::desc::,RID)">scRNA-Seq
     Data</a></li>
   </ul>
   <ul>
     <li class="sub-parent">DATA COLLECTIONS</li>
-<!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ?pcid=static/home">Featured Image Annotations</a></li> -->
-    <li><a href="/chaise/recordset/#2/Common:Collection@sort(RID)?pcid=static/home">All Data Collections</a></li>
+<!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ">Featured Image Annotations</a></li> -->
+    <li><a href="/chaise/recordset/#2/Common:Collection@sort(RID)">All Data Collections</a></li>
   </ul>
 </div>
 <div class="col-md-4">
   <ul>
     <li class="sub-parent">IMAGING</li>
-    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoZGxkA@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=static/home">In-situ Hybridization</a></li>
-    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoBJABIBhQ0eNA?pcid=static/home">Immunohistochemistry</a></li>
-    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoAJbkiIoANigDm+48ZAA@sort(Stage_Ordinal,RID)?pcid=static/home">Histology</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFoATJYBipoZGxkA@sort(RCT::desc::,Stage_Ordinal,RID)">In-situ Hybridization</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoBJABIBhQ0eNA">Immunohistochemistry</a></li>
+    <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAOTDTDQrAAsU3XEkoAJbkiIoANigDm+48ZAA@sort(Stage_Ordinal,RID)">Histology</a></li>
     <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFp3l2Y0NGxkA@sort(RCT::desc::,Stage_Ordinal,RID)">NanoCT</a></li>
     <!--
-<li><a href="/chaise/recordset/#2/Gene_Expression:Specimen@sort(RCT::desc::,Stage_Ordinal,RID)?pcid=home/static">All Specimen Data</a></li>
+<li><a href="/chaise/recordset/#2/Gene_Expression:Specimen@sort(RCT::desc::,Stage_Ordinal,RID)">All Specimen Data</a></li>
 -->
   </ul>
   <ul>
     <li class="sub-parent">SEQUENCING</li>
-    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6BoZAA@sort(RMT::desc::,RID)?pcid=static/home">mRNA-Seq</a></li>
-    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF7sIKnJAJoAUvkATPoGhkA@sort(RMT::desc::,RID)?pcid=static/home">scRNA-Seq/snRNA-Seq</a></li>
-    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfoGhkA@sort(RMT::desc::,RID)?pcid=static/home">ChIP-Seq</a></li>
-    <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)?pcid=static/home">Microarray</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6BoZAA@sort(RMT::desc::,RID)">mRNA-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF7sIKnJAJoAUvkATPoGhkA@sort(RMT::desc::,RID)">scRNA-Seq/snRNA-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAayfoGhkA@sort(RMT::desc::,RID)">ChIP-Seq</a></li>
+    <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)">Microarray</a></li>
     <!--
-    <li><a href="/chaise/recordset/#2/RNASeq:Study/?pcid=static/home">All Studies</a></li>
+    <li><a href="/chaise/recordset/#2/RNASeq:Study/">All Studies</a></li>
     -->
   </ul>
 </div>
 <div class="col-md-4">
   <ul>
     <li class="sub-parent">EXPERIMENT PROTOCOLS</li>
-    <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)?pcid=static/home">All Protocols</a></li>
+    <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)">All Protocols</a></li>
   </ul>
   <ul>
     <li class="sub-parent">CELL & ANIMAL MODELS</li>
-    <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line@sort(ID)?pcid=static/home">Transgenic Reporter Cell Lines</a></li>
-    <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line?pcid=static/home">Parental Cell Lines</a></li>
-    <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)?pcid=static/home">Transgenic Mouse Strains</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Reporter_Cell_Line@sort(ID)">Transgenic Reporter Cell Lines</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Parental_Cell_Line">Parental Cell Lines</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)">Transgenic Mouse Strains</a></li>
   </ul>
   <ul>
     <li class="sub-parent">ANTIBODIES</li>
-    <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)?pcid=static/home">Antibody Validation</a></li>
-    <li><a href="/chaise/recordset/#2/Antibody:Antibodies?pcid=static/home">Antibody Listings</a></li>
+    <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)">Antibody Validation</a></li>
+    <li><a href="/chaise/recordset/#2/Antibody:Antibodies">Antibody Listings</a></li>
   </ul>
 </div>
 </div>
@@ -129,48 +241,121 @@ title: ATLAS-D2K - Transforming Data into Knowledge
 
 
 </div>
-<div class="row">
-<div class="col-md-12">
-  <section id="news">
-    <h3>Latest News</h3>
-    <ul class="posts">
-      {% for post in site.posts limit: 4 %}
-    <li>
-      <h4>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-      </h4>
-      <time>
-        {{ post.date | date: "%m/%d/%Y" }}
-        </time>
-    </li>
-    {% endfor %}
-    </ul>
-  <!--  <a id="more-news" href="/news/">more news ></a><br>
-    <a href="/publications/">publications ></a> -->
-  </section>
-</div>
-</div>
-<!--
-<h4>Contributing Consortia</h4>
+<div class="row" id="community">
+  <div class="col-md-3" id="news">
 
-<div class="gallery">
-  <div class="consortium">
-    <a href="https://www.gudmap.org" target="_blank">
-    <img src="http://via.placeholder.com/200x200" alt="">
-    </a>
+      <h3>Latest News</h3>
+      <ul class="posts">
+        {% for post in site.posts limit: 4 %}
+      <li>
+        <a href="{{ post.url }}">{{ post.title }}</a><br/>
+        <time>
+          {{ post.date | date: "%m/%d/%Y" }}
+          </time>
+      </li>
+      {% endfor %}
+      </ul>
+    <a id="more-news" href="/news/">more news ></a><br>
+    <!--    <a href="/publications/">publications ></a> -->
+
   </div>
-  <div class="consortium">
-    <img src="http://via.placeholder.com/200x200" alt="">
+  <div class="col-md-3" id="events">
+
+    <h3>Upcoming Events</h3>
+    <ul>
+      {% for event in site.events %}
+         <li>
+            <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
+         </li>
+      {% endfor %}
+</ul>
+
+
   </div>
-  <div class="consortium">
-    <img src="http://via.placeholder.com/200x200" alt="">
+
+  <div class="col-md-6" id="consortiums">
+  <h3>Consortiums</h3>
+    <div class="rbk-ad">
+      <a href="/rebuildingakidney/">
+        <img src="#" alt="RBK Ad">
+      </a>
+    </div>
+
+    <div class="gudmap-ad">
+      <a href="/gudmap/">
+        <img src="#" alt="GUDMAP Ad">
+      </a>
+    </div>
+
   </div>
-  <div class="consortium">
-    <img src="http://via.placeholder.com/200x200" alt="">
-  </div>
-  <div class="consortium">
-    <img src="http://via.placeholder.com/200x200" alt="">
-  </div>
--->
 </div>
+<div class="row" id="featured-tools">
+  <div class="col-md-12">
+    <h2>Featured Tools</h2>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="..." alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        <div class="item">
+          <img src="..." alt="...">
+          <div class="carousel-caption">
+            ...
+          </div>
+        </div>
+        ...
+      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </div>
+
+<div class="row" id="opps">
+  <h2>Funding and Collaboration Opportunities</h2>
+  <div class="col-md-4">
+    <h3>RBK Opportunity Pool</h3>
+    <p>info...</p>
+  </div>
+  <div class="col-md-4">
+    <h3>GUDMAP Collaborating Group</h3>
+    <p>info...</p>
+  </div>
+  <div class="col-md-4">
+    <h3>RBK Collaborating Group</h3>
+    <p>info...</p>
+  </div>
+</div>
+
+<div class="row" id="pubs">
+  <div class="col-md-4">
+    <h3>Publications</h3>
+    <p>list of publications</p>
+  </div>
+
+  <div class="col-md-8">
+    <h3>Featured Images</h3>
+    <p>gallery of images</p>
+  </div>
+</div>
+
+</div> <!-- end of home content div -->
