saving placeholders for consortium ads

--- a/index.html
+++ b/index.html
@@ -275,15 +275,21 @@ title: ATLAS-D2K - Transforming Data into Knowledge
 
   <div class="col-md-6" id="consortiums">
   <h3>Consortiums</h3>
+  <p>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums.</p>
     <div class="rbk-ad">
-      <a href="/rebuildingakidney/">
-        <img src="#" alt="RBK Ad">
-      </a>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <a href="/rebuildingakidney/">
+            <img src="/assets/img/rbk-ad.png" alt="RBK Ad">
+          </a>
+        </div>
+      </div>
+
     </div>
 
     <div class="gudmap-ad">
       <a href="/gudmap/">
-        <img src="#" alt="GUDMAP Ad">
+        <img src="/assets/img/rbk-ad.png" alt="GUDMAP Ad">
       </a>
     </div>
 
