taking out extra page title, adding gudmap credit

--- a/tutorials/innervation/index.html
+++ b/tutorials/innervation/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Lower Urinary Tract Innervation and its Development
-attribution: Provided by Janet Keast, University of Melbourne and Michelle Southard-Smith, Vanderbilt University Medical Center<br/><small>June 2021</small>
+attribution: Provided by Janet Keast, University of Melbourne and Michelle Southard-Smith, Vanderbilt University Medical Center<br/><small>June 2021 (GUDMAP)</small>
 description: Educational tutorial focused on the nerves regulating the lower urinary tract (LUT) of rodents, providing specific examples from mice. By the Keast and Southard-Smith Labs.
 
 ---
