--- a/tutorials/kidney-dev/index.html
+++ b/tutorials/kidney-dev/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Development of the Kidney in Mouse and Human
-attribution: Provided by Andrew McMahon, University of Southern California<br/><small>October 2017</small>
+attribution: Provided by Andrew McMahon, University of Southern California<br/><small>October 2017 (GUDMAP)</small> 
 description: Educational tutorial that describes the development of the kidney and touches on the difference between development in human versus mouse. By the Andrew McMahon Lab.
 ---
 
