--- a/tutorials/prostate-dev/index.html
+++ b/tutorials/prostate-dev/index.html
@@ -1,7 +1,7 @@
 ---
 layout: tutorials
 title: Prostate Development
-attribution: Provided by Chad Vezina, University of Wisconsin-Madison<br/><small>October 2017</small>
+attribution: Provided by Chad Vezina, University of Wisconsin-Madison<br/><small>October 2017 (GUDMAP)</small>
 description: Tutorial that describes the development of the prostate in mice by the Chad Vezina lab.
 ---
 
