further work on homepage

--- a/index.html
+++ b/index.html
@@ -276,24 +276,25 @@ title: ATLAS-D2K - Transforming Data into Knowledge
   <div class="col-md-6" id="consortiums">
   <h3>Consortiums</h3>
   <p>The ATLAS-D2K Center supports the data and resources of the RBK and GUDMAP Consortiums.</p>
-    <div class="rbk-ad">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <a href="/rebuildingakidney/">
-            <img src="/assets/img/rbk-ad.png" alt="RBK Ad">
-          </a>
-        </div>
-      </div>
 
-    </div>
+  <div class="row"> <!-- Start a new row for the ads -->
 
-    <div class="gudmap-ad">
-      <a href="/gudmap/">
-        <img src="/assets/img/rbk-ad.png" alt="GUDMAP Ad">
+    <div class="col-md-6 rbk-ad">
+      <a href="/rebuildingakidney/">
+        <img src="/assets/img/rbk-ad.png" alt="RBK Consortium">
       </a>
     </div>
 
-  </div>
+    <div class="col-md-6 gudmap-ad">
+      <a href="/gudmap/">
+        <img src="/assets/img/gudmap-ad.png" alt="GUDMAP Consortium">
+      </a>
+    </div>
+
+  </div> <!-- End of the row -->
+
+</div>
+
 </div>
 <div class="row" id="featured-tools">
   <div class="col-md-12">
