--- a/events/index.html
+++ b/events/index.html
@@ -4,6 +4,21 @@ title: ATLAS-D2K Events
 ---
 
 <ul>
+  {% assign sorted_events = site.events | sort: "start_date" %}
+  {% for event in sorted_events %}
+     <li>
+        <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
+        <p>Date:
+           {{ event.start_date | date: "%B %d, %Y" }} -
+           {{ event.end_date | date: "%B %d, %Y" }}
+        </p>
+        <p>Location: {{ event.location }}</p>
+     </li>
+  {% endfor %}
+</ul>
+
+<!--
+<ul>
   {% for event in site.events %}
      <li>
         <h3><a href="{{ event.url }}">{{ event.title }}</a></h3>
@@ -16,6 +31,7 @@ title: ATLAS-D2K Events
   {% endfor %}
 
 </ul>
+-->
 <!-- add this after 10/24/23
 <h2>Past Events</h2>
 -->
